Задание 6 спринт 2 версия